# micro-casting-prototype

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TESTING_PLAN.md  TEST_REPORT.md  TEST_RESULTS_FINAL.md  pyproject.toml
apps/mcp-async-tools/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-chained-tools/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-custom-formats/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-echo-tool/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-error-handling/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-example-server/: README.md  pyproject.toml  server.py
apps/mcp-filesystem-retrieval/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-hello-world/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-http-retrieval/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-json-retrieval/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-json-serialization/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-multi-resource-server/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-protocol-buffers/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-pydantic-models/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-rag-pipeline/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-simple-retrieval/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-sqlite-retrieval/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-srv-mtdlgy_mcp/: README.md  list_tools.py  pyproject.toml  server.py  test_server.py
apps/mcp-srv-mtdlgy_mcp/transforms/: compile.py  ingest.py  utils.py  validate.py
apps/mcp-srv-mtdlgy_mcp/var/: catalog.current.json  catalog.previous.json  compiled.rules.json  state-fail.json  state-pass.json
apps/mcp-stateful-tools/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-streaming-responses/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-sync-tools/: README.md  pyproject.toml  server.py  test_server.py
apps/mcp-vector-search/: README.md  pyproject.toml  server.py  test_server.py
apps/sitemap-crawler/: README.md  ROADMAP.md  config.yaml  pyproject.toml
apps/sitemap-crawler/src/sitemap_crawler/: __init__.py  cli.py  config.py  correlation.py  crawler.py  logging_config.py  metrics.py  resilience.py  robots.py
apps/sitemap-crawler/src/sitemap_crawler/parsers/: __init__.py  base.py  direct_url.py  llms_txt.py  xml_sitemap.py
apps/sitemap-crawler/src/sitemap_crawler/storage/: __init__.py  base.py  local.py
docs/: GITHUB_PAGES_SETUP.md  MCP_BLUEPRINTS.md  environment-setup.md  index.html  mcp-server-blueprints.md  testdata-mapping.md
docs/ADR/: ADR-000-tlp.md  ADR-001_monorepo.md  ADR-002_crawl4ai.md  ADR-003_pyproject_standardization.md  ADR-004_methodology_mcp_separation.md
docs/methodology/: README.md  VERSION  data.json  data.json.v0.4.2.backup  development.html  index.html  state.example.json
docs/methodology/schema/: README.md  advisory.schema.json  core.schema.json  predicate.schema.json  v0.3.0.schema.json  v0.4.0-alpha.schema.json
docs/schema/: README.md  v0.3.0.schema.json  v0.4.0-alpha.schema.json
libs/crawling/: README.md  pyproject.toml
libs/crawling/src/crawling/: __init__.py  client.py
libs/mcp-core/: README.md  pyproject.toml
libs/mcp-core/src/mcp_core/: __init__.py  echo.py  hello.py
libs/mcp-core/tests/: test_echo.py  test_hello.py
libs/mcp-testdata/: pyproject.toml
libs/mcp-testdata/src/mcp_testdata/: __init__.py  cli.py
libs/mcp-testdata/src/mcp_testdata/generators/: library.py
scripts/: audit_testdata_needs.py  create_all_20_servers.sh  enhance_readmes.py  fix_pyproject_files.py  generate_all_servers.py  generate_remaining_tests.sh  generate_test_suites.py  load_env.sh  run_all_tests.py
testdata/: README.md  books.db  create_sample_db.py  sample.txt  users.json
testdata/databases/: ecommerce.db  finance.db  library.db  logistics.db
testdata/files/: README.md  api_design.txt  app.conf  config.json  config.yaml  database_intro.txt  docker-compose.yaml  employees.csv  events.jsonl  javascript_intro.txt  logs.jsonl  machine_learning.txt  nested.json  person.proto  products.json  pyproject.toml  python_intro.txt  sales.csv  sample.py  settings.toml
testdata/files/data/processed/: results.txt
testdata/files/project/docs/: API.md
testdata/files/project/src/: main.py
testdata/files/project/tests/: test_main.py
testdata/scripts/: generate_comprehensive_testdata.py  generate_ecommerce.py  generate_finance.py  generate_logistics.py  pyproject.toml  seed_all.py
tools/: stem-methodology-search.py
