[project]
name = "mcp-chained-tools"
version = "0.1.0"
description = "Tool composition and chaining patterns"
authors = [
    {name = "Christian Prior-Mamulyan", email = "cprior@gmail.com"}
]
license = {file = "../../LICENSE"}
requires-python = ">=3.10"
dependencies = ["mcp>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
