[project]
name = "mcp-echo-tool"
version = "0.1.0"
description = "Simple tool invocation pattern with parameter validation"
authors = [
    {name = "Christian Prior-Mamulyan", email = "cprior@gmail.com"}
]
license = {file = "../../LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
