[project]
name = "mcp-filesystem-retrieval"
version = "0.1.0"
description = "File system navigation and reading"
authors = [
    {name = "Christian Prior-Mamulyan", email = "cprior@gmail.com"}
]
license = {file = "../../LICENSE"}
requires-python = ">=3.10"
dependencies = ["mcp>=0.1.0", "aiofiles>=23.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
