[project]
name = "mcp-json-serialization"
version = "0.1.0"
description = "JSON schema validation and serialization"
authors = [
    {name = "Christian Prior-Mamulyan", email = "cprior@gmail.com"}
]
license = {file = "../../LICENSE"}
requires-python = ">=3.10"
dependencies = ["mcp>=0.1.0", "jsonschema>=4.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
