[project]
name = "mcp-multi-resource-server"
version = "0.1.0"
description = "Multi-capability server"
requires-python = ">=3.10"
dependencies = ['mcp>=0.1.0', 'aiofiles>=23.0.0', 'httpx>=0.25.0']


[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
