[project]
name = "mcp-srv-mtdlgy-mcp"
version = "0.1.0"
description = "MCP Server for Methodology Advisory and Validation"
readme = "README.md"
authors = [
    {name = "Christian Prior-Mamulyan", email = "cprior@gmail.com"}
]
license = {file = "../../LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "mcp[cli]>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_srv_mtdlgy_mcp"]
