[project]
name = "mcp-streaming-responses"
version = "0.1.0"
description = "Streaming data patterns"
authors = [
    {name = "Christian Prior-Mamulyan", email = "cprior@gmail.com"}
]
license = {file = "../../LICENSE"}
requires-python = ">=3.10"
dependencies = ["mcp>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
